--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -5,7 +5,13 @@
 
 *********************************/
 
-body { --violet: 143, 5, 149; --plum: 81, 0, 130; --light: 191, 116, 194; }
+* { 
+   --violet: 143, 5, 149; 
+  --plum: 81, 0, 130; 
+  --light: 191, 116, 194; 
+  background: rgb((--plum));
+  background: linear-gradient(0deg, rgba((--plum),1) 0%, rgba((--violet),1) 100%);
+}
 
 body { 
   width: 450px; 
