--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -5,7 +5,7 @@
 
 *********************************/
 
-* { 
+html { 
    --violet: 143, 5, 149; 
   --plum: 81, 0, 130; 
   --light: 191, 116, 194; 
