--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -11,6 +11,7 @@ html {
   --light: 191, 116, 194; 
   background: rgb(var(--plum));
   background: linear-gradient(0deg, rgba(var(--plum),1) 0%, rgba(var(--violet),1) 100%);
+  height: 100%;
 }
 
 body { 
