--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -90,18 +90,18 @@ h1 {
   color: rgba(var(--light),1);
 }
 .socials { 
-  color: rgba(var(--light), 1)!important; 
+  color: rgba(var(--violet), 1)!important; 
   font-size: 45px;
   text-align: center;
 }
 .socials a, .socials a:active, .socials a:visited { 
-  color: rgba(var(--light), 1)!important; 
+  color: rgba(var(--violet), 1)!important; 
   margin: 0px 4px; 
   text-decoration: none;
   transition: all .2s ease;
 }
 .socials a:hover {
-  color: rgba(var(--plum),1); 
+  color: rgba(var(--plum),1) !important; 
 }
 
 /* Large */
