--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -91,14 +91,19 @@ h1 {
 }
 .socials { 
   color: rgba(var(--violet), 1); 
-  font-size: 20px;
+  font-size: 15px;
   text-align: center;
 }
 .socials a, .socials a:active, .socials a:visited { 
   color: rgba(var(--violet), 1); 
   margin: 0px 4px; 
+  width: 20px; height: 20px; text-align: center; 
+  line-height: 20px; 
+  border: 1px dotted rgba(var(--violet),1); 
+  border-radius: 10px;
   text-decoration: none;
   transition: all .2s ease;
+  
 }
 .socials a:hover {
   color: rgba(var(--plum),1); 
