--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -95,7 +95,8 @@ h1 {
   text-align: center;
 }
 .socials a, .socials a:active, .socials a:visited { 
-  color: rgba(var(--violet), 1); 
+  background: rgba(var(--plum), 1); 
+  color: rgba(var(--light),1);
   margin: 0px 4px; 
   width: 20px; height: 20px; text-align: center; 
   line-height: 20px; 
@@ -103,10 +104,10 @@ h1 {
   border-radius: 10px;
   text-decoration: none;
   transition: all .2s ease;
-  
+  display: inline-block; 
 }
 .socials a:hover {
-  color: rgba(var(--plum),1); 
+  color: rgba(var(--violet),1); 
 }
 
 /* Large */
