--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -133,3 +133,50 @@ h1 {
     flex-direction: column;
   }
 }
+
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  background-color: rgba(var(--light),1);
+  padding: 10px 0 10px;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: space-between;
+  justify-content: space-between;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: rgba(var(--violet),1);
+  color: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  margin: 0 35px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  opacity: .8;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: rgba(var(--plum),1);
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 0;
+  height: 230px;
+}
+.scroller { 
+height: 210px;
+overflow: auto;
+  padding: 0px 5px;
+  margin: 0 0 0;
+}
