--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -18,7 +18,7 @@ body {
   background: rgba(var(--light), 1); 
   font-size: 14px;
   margin: 20px auto; 
-  height: auto;
+  height: 100%;
   width: 700px; 
 }
 
