--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -16,6 +16,7 @@ html {
 
 body { 
   background: rgba(var(--light), 1); 
+  background-attachment: fixed;
   font-size: 14px;
   margin: 20px auto; 
   height: 100%;
