--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -4,7 +4,7 @@
 *********************************/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Mulish:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-html { 
+html, body { 
   --violet: 143, 5, 149; 
   --plum: 81, 0, 130; 
   --light: 191, 116, 194; 
@@ -14,12 +14,10 @@ html {
   font-family: Mulish, sans-serif;
 }
 
-body { 
+.backkground { 
   background: rgba(var(--light), 1); 
-  background-attachment: fixed;
   font-size: 14px;
   margin: 20px auto; 
-  height: 100%;
   width: 700px; 
 }
 
