--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -131,6 +131,22 @@ h1 {
     /* On small screens, we are no longer using row direction but column */
     flex-direction: column;
   }
+  .backkground { 
+  width: 400px; 
+}
+
+.child  {
+  max-height: 400px; 
+  height: inherit;
+  }
+.rockyimg {
+  width: 100%;
+  height: 150px;
+}
+.rockyimg img {
+  height: 150px;
+}
+
 }
 
 
