--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -137,7 +137,6 @@ h1 {
   color: rgba(var(--violet),1); 
 }
 
-/* Large */
 .parent {
   display: flex;
   flex-flow: row wrap;
@@ -145,37 +144,7 @@ h1 {
   justify-content: flex-end;
 }
 
-/* Medium screens */
-@media all and (max-width: 800px) {
-  .parent {
-    /* When on medium sized screens, we center it by evenly distributing empty space around items */
-    justify-content: space-around;
-  }
-}
 
-/* Small screens */
-@media all and (max-width: 500px) {
-  .parent {
-    /* On small screens, we are no longer using row direction but column */
-    flex-direction: column;
-  }
-  .backkground-sort, .backkground { 
-  width: 400px; 
-}
-
-.child  {
-  max-height: 400px; 
-  height: inherit;
-  }
-.rockyimg {
-  width: 100%;
-  height: 150px;
-}
-.rockyimg img {
-  height: 150px;
-}
-
-}
 
 h1 {
   background: linear-gradient(0deg, rgba(var(--plum),1), rgba(var(--violet),1));
@@ -576,4 +545,41 @@ h4 {
 .tabbed [type="radio"]:nth-of-type(4):checked ~ .tab-content:nth-of-type(4) {
 	display: block;
   
+}
+
+
+/* Small screens */
+@media all and (max-width: 500px) {
+  .parent {
+    /* On small screens, we are no longer using row direction but column */
+    flex-direction: column;
+  }
+  .backkground-sort, .backkground { 
+  width: 400px; 
+	  
+}
+  .pcgrid {
+    margin: 0;
+    max-height: auto;
+  }
+  .labelholder {
+    flex-flow: row wrap;
+    width: 100%; 
+    float: none;
+}
+  .button2 {
+width: auto;
+    display: inline-block; 
+  }
+.child  {
+  max-height: 400px; 
+  height: inherit;
+  }
+.rockyimg {
+  width: 100%;
+  height: 150px;
+}
+.rockyimg img {
+  height: 150px;
+}
 }
