--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -102,7 +102,7 @@ h1 {
 .linkbox {
 	display: flex; 
 	flex-flow: row wrap; 
-	justify-content: space-evenly; 
+	justify-content: space-between; 
 }
 
 .linkbox a, .linkbox a:visited, .linkbox a:active {
